// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestMessageBanner matches snapshot for EMAIL template type 1`] = `
<div>
  <div
    class="test-message-banner nhsuk-summary-list nhsuk-u-margin-bottom-6"
  >
    <div
      class="nhsuk-warning-callout"
      data-testid="test-message-banner"
    >
      This is only a basic preview. 
      <a
        href="/templates/send-test-email-message/template-789"
        rel="noopener noreferrer"
        target="_blank"
      >
        Send a test email message
      </a>
       to preview this message properly.
    </div>
  </div>
</div>
`;

exports[`TestMessageBanner matches snapshot for NHS_APP template type 1`] = `
<div>
  <div
    class="test-message-banner nhsuk-summary-list nhsuk-u-margin-bottom-6"
  >
    <div
      class="nhsuk-warning-callout"
      data-testid="test-message-banner"
    >
      This is only a basic preview. 
      <a
        href="/templates/send-test-nhs-app-message/template-123"
        rel="noopener noreferrer"
        target="_blank"
      >
        Send a test NHS App message
      </a>
       to preview this message properly.
    </div>
  </div>
</div>
`;

exports[`TestMessageBanner matches snapshot for SMS template type 1`] = `
<div>
  <div
    class="test-message-banner nhsuk-summary-list nhsuk-u-margin-bottom-6"
  >
    <div
      class="nhsuk-warning-callout"
      data-testid="test-message-banner"
    >
      This is only a basic preview. 
      <a
        href="/templates/send-test-text-message/template-456"
        rel="noopener noreferrer"
        target="_blank"
      >
        Send a test text message
      </a>
       to preview this message properly.
    </div>
  </div>
</div>
`;
